--- a/app/src/main/res/layout/item_send_message.xml
+++ b/app/src/main/res/layout/item_send_message.xml
@@ -33,6 +33,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@id/iv_faild"
             android:layout_width="58pt"
             android:layout_height="58pt"
             android:layout_gravity="center_vertical"
