--- a/app/src/main/res/layout/item_add_friend.xml
+++ b/app/src/main/res/layout/item_add_friend.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_toEndOf="@id/iv_photo"
-        android:layout_toStartOf="@id/tv_time"
+        android:layout_toStartOf="@id/btn_yes"
         android:layout_centerVertical="true"
         android:orientation="vertical">
 
@@ -42,16 +42,22 @@
             android:textSize="12sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@id/tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@id/btn_yes"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_toStartOf="@id/btn_no"
+        android:layout_centerVertical="true"
+        android:text="@string/yes"/>
+
+
+    <Button
+        android:id="@id/btn_no"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="10dp"
-        android:text="@string/defalut"
-        android:textSize="12sp" />
+        android:text="@string/no"/>
 
     <View
         android:layout_width="match_parent"
