--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include
+        android:id="@id/rl_title"
+        layout="@layout/layout_simple_title"/>
+
     <FrameLayout
         android:id="@id/fl_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/rl_title"/>
 
     <RadioGroup
         android:id="@+id/radio_group"
