--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,32 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:background="@color/base_color_text_white"
+    android:orientation="vertical"
+    android:paddingTop="22pt">
 
-    <TextView
-        android:id="@id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp"
-        android:text="@string/username"
-        android:gravity="center_vertical"
-        android:textSize="20sp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="110pt"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@id/tv_code"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_vertical"
-        android:layout_marginEnd="20dp"
-        android:text="@string/roomCode" />
-    
+        <ImageView
+            android:id="@id/iv_photo"
+            android:layout_width="110pt"
+            android:layout_height="110pt"
+            android:layout_marginEnd="38pt"
+            android:layout_marginStart="42pt"
+            android:src="@mipmap/rt_head" />
+
+        <TextView
+            android:id="@id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="76pt"
+            android:layout_toEndOf="@id/iv_photo"
+            android:gravity="center_vertical"
+            android:text="@string/username"
+            android:textColor="@color/black"
+            android:textSize="46pt" />
+
+        <TextView
+            android:id="@id/tv_code"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:text="@string/roomCode"
+            android:visibility="gone" />
+    </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimary"
-        android:layout_below="@id/tv_code"/>
-</RelativeLayout>
+        android:layout_height="1pt"
+        android:layout_marginEnd="76pt"
+        android:layout_marginStart="42pt"
+        android:layout_marginTop="22pt"
+        android:background="@color/line_gray" />
+</LinearLayout>
