--- a/app/src/main/res/layout/item_converse.xml
+++ b/app/src/main/res/layout/item_converse.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/base_color_text_white">
 
-    <com.zhangye.im.widget.CircleImageView
+    <ImageView
         android:id="@id/iv_photo"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="150pt"
+        android:layout_height="150pt"
+        android:layout_marginBottom="25pt"
+        android:layout_marginStart="44pt"
+        android:layout_marginTop="25pt"
         android:contentDescription="@null"
         android:src="@mipmap/rt_head" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="30pt"
         android:layout_toEndOf="@id/iv_photo"
         android:layout_toStartOf="@id/tv_time"
-        android:layout_centerVertical="true"
         android:orientation="vertical">
 
         <TextView
@@ -29,17 +30,19 @@
             android:ellipsize="end"
             android:lines="1"
             android:text="@string/defalut"
-            android:textSize="20sp" />
+            android:textColor="@color/black"
+            android:textSize="50pt" />
 
 
         <TextView
             android:id="@id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10pt"
             android:ellipsize="end"
             android:lines="1"
             android:text="@string/defalut"
-            android:textSize="12sp" />
+            android:textSize="40pt" />
     </LinearLayout>
 
     <TextView
@@ -47,15 +50,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="40pt"
+        android:layout_marginStart="40pt"
+        android:layout_marginTop="20pt"
         android:text="@string/defalut"
-        android:textSize="12sp" />
+        android:textSize="38pt" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="1pt"
         android:layout_below="@id/iv_photo"
         android:background="@color/line_gray" />
 </RelativeLayout>
