--- a/app/src/main/res/layout/item_receive_message.xml
+++ b/app/src/main/res/layout/item_receive_message.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_chat_top">
-
-    <com.zhangye.im.widget.CircleImageView
-        android:id="@+id/iv_avatar"
-        android:layout_width="138pt"
-        android:layout_height="138pt"
-        android:layout_marginStart="25pt"
-        android:scaleType="fitXY"
-        android:src="@mipmap/rt_head" />
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18pt"
-        android:layout_marginTop="55pt"
-        android:layout_toEndOf="@id/iv_avatar"
-        android:textSize="31pt" />
+        android:layout_marginTop="40pt"
+        android:layout_centerHorizontal="true"
+        android:textSize="31pt"
+        android:visibility="gone"/>
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="230pt"
-        android:layout_marginStart="18pt"
-        android:layout_marginTop="108pt"
-        android:layout_toEndOf="@id/iv_avatar"
-        android:background="@drawable/chat_right_qp"
-        android:gravity="center"
-        android:padding="35pt">
+        android:layout_marginTop="@dimen/margin_chat_top"
+        android:paddingBottom="40pt"
+        android:paddingTop="40pt"
+        android:layout_below="@id/tv_name">
 
-        <TextView
-            android:id="@+id/tv_message"
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="126pt"
+            android:layout_height="126pt"
+            android:layout_marginStart="25pt"
+            android:scaleType="fitXY"
+            android:src="@mipmap/rt_head" />
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:lineSpacingMultiplier="1.5"
-            android:textColor="#ff000000"
-            android:textSize="43pt" />
-    </RelativeLayout>
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/iv_avatar"
+            android:background="@drawable/item_chat_to"
+            android:layout_marginStart="18pt"
+            android:paddingTop="34pt"
+            android:paddingBottom="34pt"
+            android:paddingStart="50pt"
+            android:paddingEnd="35pt">
 
+            <TextView
+                android:id="@+id/tv_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lineSpacingMultiplier="1.5"
+                android:textColor="#ff000000"
+                android:textSize="43pt" />
+        </RelativeLayout>
+
+    </RelativeLayout>
 </RelativeLayout>
