--- a/app/src/main/res/layout/item_send_message.xml
+++ b/app/src/main/res/layout/item_send_message.xml
@@ -1,62 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="14pt">
-
-    <com.zhangye.im.widget.CircleImageView
-        android:id="@+id/iv_avatar"
-        android:layout_width="138pt"
-        android:layout_height="138pt"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="25pt"
-        android:scaleType="fitXY"
-        android:src="@mipmap/rt_head" />
+    android:orientation="vertical">
 
     <TextView
         android:id="@id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18pt"
-        android:layout_marginTop="55pt"
-        android:layout_toStartOf="@id/iv_avatar"
+        android:layout_marginTop="40pt"
         android:text="@string/send"
-        android:textSize="31pt" />
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:textSize="31pt"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="18pt"
-        android:layout_marginStart="172pt"
-        android:layout_marginTop="108pt"
-        android:layout_toStartOf="@id/iv_avatar"
-        android:orientation="horizontal">
+        android:layout_marginTop="14pt"
+        android:paddingBottom="40pt"
+        android:paddingTop="40pt"
+        android:layout_below="@id/tv_name">
 
         <ImageView
-            android:id="@id/iv_faild"
-            android:layout_width="58pt"
-            android:layout_height="58pt"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="22pt"
-            android:contentDescription="@null"
+            android:id="@+id/iv_avatar"
+            android:layout_width="126pt"
+            android:layout_height="126pt"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="25pt"
             android:scaleType="fitXY"
-            android:src="@mipmap/icon_send_faild" />
-
-        <RelativeLayout
+            android:src="@mipmap/rt_head" />
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/chat_left_qp"
-            android:gravity="center"
-            android:padding="34pt">
+            android:layout_marginEnd="18pt"
+            android:layout_marginStart="136pt"
+            android:layout_toStartOf="@id/iv_avatar"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_message"
+            <ImageView
+                android:id="@id/iv_faild"
+                android:layout_width="58pt"
+                android:layout_height="58pt"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="22pt"
+                android:contentDescription="@null"
+                android:scaleType="fitXY"
+                android:src="@mipmap/icon_send_faild" />
+
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:lineSpacingMultiplier="1.5"
-                android:textColor="#ff000000"
-                android:textSize="43pt" />
-        </RelativeLayout>
+                android:background="@drawable/item_chat_me"
+                android:paddingBottom="34pt"
+                android:paddingEnd="50pt"
+                android:paddingStart="35pt"
+                android:paddingTop="34pt">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:lineSpacingMultiplier="1.5"
+                    android:textColor="#ff000000"
+                    android:textSize="45pt" />
+            </RelativeLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
