--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="base_actionbar_bg">#f5f5f5</color>
@@ -43,4 +43,5 @@
     <color name="gray_normal">#666667</color>
 
     <color name="bg_input">#fafafa</color>
+    <color name="black">#000000</color>
 </resources>
